--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <h3 class="text-xl font-bold mb-2" style="font-family: 'PT Serif', serif; ">Emergency Plumbing Services</h3>
       <p class="text-gray-600 mb-4">Our plumbers are ready to go 24/7 for emergencies - including nights, weekends, and holidays.</p>
-      <a href="https://example.com/emergency-plumbing" class="text-purple-600 font-bold uppercase text-xs">Explore This Service ></a>
+      <a href="#" class="text-purple-600 font-bold uppercase text-xs">Explore This Service ></a>
     </div>
 
     <div class="service-card bg-white p-6 text-center shadow-lg w-full max-w-xs">
@@ -42,7 +42,7 @@
       </div>
       <h3 class="text-xl font-bold mb-2" style="font-family: 'PT Serif', serif; ">Plumbing and Drains</h3>
       <p class="text-gray-600 mb-4">As the largest plumbing and drain service company, we make thousands of repairs every day.</p>
-      <a href="https://example.com/plumbing-drains" class="text-purple-600 font-bold uppercase text-xs">Explore This Service ></a>
+      <a href="#" class="text-purple-600 font-bold uppercase text-xs">Explore This Service ></a>
     </div>
 
     <div class="service-card bg-white p-6 text-center shadow-lg w-full max-w-xs">
@@ -53,7 +53,7 @@
       </div>
       <h3 class="text-xl font-bold mb-2" style="font-family: 'PT Serif', serif; ">Water Damage</h3>
       <p class="text-gray-600 mb-4">Our teams are equipped with state-of-the-art water extraction and cleanup equipment.</p>
-      <a href="https://example.com/water-damage" class="text-purple-600 font-bold uppercase text-xs">Explore This Service ></a>
+      <a href="#" class="text-purple-600 font-bold uppercase text-xs">Explore This Service ></a>
     </div>
 
     <div class="service-card bg-white p-6 text-center shadow-lg w-full max-w-xs">
@@ -64,7 +64,7 @@
       </div>
       <h3 class="text-xl font-bold mb-2" style="font-family: 'PT Serif', serif; ">Water Heaters</h3>
       <p class="text-gray-600 mb-4">Trust Roto-Rooter for repair and replacement of gas, electric, and tankless water heaters.</p>
-      <a href="https://example.com/water-heaters" class="text-purple-600 font-bold uppercase text-xs">Explore This Service ></a>
+      <a href="#" class="text-purple-600 font-bold uppercase text-xs">Explore This Service ></a>
     </div>
 
   </div>
