--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="service-card bg-white p-6 text-center shadow-lg w-full max-w-xs">
       <div class="icon-wrapper relative -mt-14 mb-6 flex justify-center">
         <div class="icon bg-white border-4 border-purple-800 p-4 rounded-full flex items-center justify-center">
-          <img src="https://cdn-user-icons.flaticon.com/132796/132796747/1729002756431.svg?token=exp=1729003665~hmac=c26c3be99900bfd7aea130e2c738a014" alt="Boiler Installation Services" class="w-16 h-16">
+          <img src="https://img.icons8.com/?size=100&id=63145&format=png&color=4c1d95" alt="Boiler Installation Services" class="w-16 h-16">
         </div>
       </div>
       <h3 class="text-xl font-bold mb-2" style="font-family: 'PT Serif', serif; ">Water Heaters</h3>
